manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corderos-app
  namespace: corderos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corderos-app
  template:
    metadata:
      labels:
        app: corderos-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: corderos-app
        image: docker.io/kaligulix/21k-registry:corderos-app-v0.8.5
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /login
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /login
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
