manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corderos-app
  namespace: corderos
spec:
  selector:
    app: corderos-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
